@startuml

class Inscripcion {
    - materiasACursar: set<Materia>
    - almuno: Alumno

    + aprobada(): Boolean
    + agregarMateriaACursar() : void
}

class Alumno {
    - materiasAprobadas: set<Materia>

    + tieneAprobada(Materia): Boolean
    + agregarMateriaArobada() : void
}

class Materia {
    - materiasCorrelativas: set<Materia>

    + cumpleCorrelativas(Alumno): Boolean
    + agregarCorrelativa() : void
}

Inscripcion --|> Alumno
Inscripcion --|> Materia : *
Materia --|> Materia : *
Alumno --|> Materia : *
@enduml
